--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     text-align: center;
     gap: 20px;
   }
@@ -65,13 +64,13 @@
 
 </head>
 <body id="body">
-    <div id="qrContainer">
+    <main id="qrContainer">
       <img src="./images/image-qr-code.png" alt="qr code">
       <div id="text">
           <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
-    </div>
+    </main>
 
 </body>
 </html>
